--- a/css/style.css
+++ b/css/style.css
@@ -6,18 +6,19 @@ body {
   background: url(../images/background.jpeg) center no-repeat;
   background-size: cover;
   font-size: 18px;
+  font-weight: lighter;
   line-height: 1.8;
   color: white;
   text-align: center;
   height: 100vh;
-  font-weight: lighter;
+
 }
 
 header {
-  height: 100%;
+  height: 90px;
 }
 
-.intro {
+section {
   /*margin: 0 auto;*/
   position: absolute;
   top: 50%;
@@ -29,10 +30,10 @@ header {
   background: #55AFE4;
 }
 
-.intro img {
+nav img {
   width: 40px;
 }
-.intro a {
+nav a {
   text-decoration: none;
 }
 
