--- a/css/style.css
+++ b/css/style.css
@@ -3,8 +3,15 @@
 body {
   font-family: 'Josefin Sans', sans-serif;
   /*background-color: #55AFE4;*/
-  background: url(../images/background.jpeg) center no-repeat;
+  background: url(../images/background.jpeg) center no-repeat fixed;
   background-size: cover;
+  -webkit-background-size: 100%;
+    -moz-background-size: 100%;
+    -o-background-size: 100%;
+    background-size: 100%;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
   font-size: 18px;
   line-height: 1.8;
   color: white;
@@ -140,6 +147,22 @@ input[type="submit"] {
 
   .instagram img {
     width: 25px;
+  }
+}
+
+@media screen and (max-width: 750px) and (max-height: 450px) and (orientation: landscape) {
+  body {
+    font-size: 15px;
+
+  }
+
+  header {
+    width: 90%;
+    margin: 40px 0;
+  }
+
+  h1 {
+    font-size: 40px;
   }
 }
 
